--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: DS Portfolio
+title: Data Science Portfolio
 # logo: assets/image/headshot.png
 # description: text below
 #show_downloads: true
