--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Data Science Portfolio
-# logo: assets/image/headshot.png
+title: Dan Salatto Ph.D.
+logo: assets/image/headshot.png
 # description: text below
 #show_downloads: true
 theme: jekyll-theme-slate
